<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Droid Ranger</string>
    <string name="title_activity_scanning__service">Scanning Service</string>
    <string name="title_activity_file_viewer">Files</string>
    <string name="title_activity_make_connection">Select Your Presentation</string>
    <string name="action_settings">Settings</string>
    <string name="ip">Network Address</string>
    <string name="port">port</string>
    <string name="connect">connect</string>
    <string name="title_activity_server_scanner">Select a PC</string>
    <string name="server_name">server</string>
    <string name="image">server Image</string>
    <string name="text">ip address</string>
    <string name="board">Board</string>
    <string name="click">Click</string>
    <string name="open_port">5678</string>
    <string name="network_address">192.168.43</string>
    <string name="dialog_message">Do you want to project PPTs?</string>
    <string name="activity_destroy_message">Are you sure you want to exit?</string>
    <string name="positive_button">Yes</string>
    <string name="negetive_button">No</string>
    <string name="neutral_button">Dismiss</string>
    <string name="dialog_title">Confirm</string>
    <string name="confirm_exit">Are you sure you want to close presentation?</string>
    <string name="image_description">image</string>
    <string name="eraser">Eraser</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="cyan">Cyan</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="gray">Gray</string>
    <string name="magenta">Magenta</string>
    <string name="whiteboard">Whiteboard</string>
    <string name="title_activity_presetation_viewer">PresetationViewer</string>
    <string name="stop_desktop_app">Stop Desktop App</string>
	<string name="shutdown">Shutdown</string>
	<string name="restart">Restart</string>
	<string name="logoff">Log Out</string>
	<string name="hibernate">Hibernate</string>
	<string name="scan">Scan</string>
	<string name="download_message">Do you want to download file?</string>
	<string name="download">Download</string>
	<string name="cancel">Cancel</string>
	<string name="scanning">Scanning</string>
	<string name="scanning_title">Looking for servers</string>
	<string name="downloading">Downloading</string>
	<string name="fetching">Fetching Files</string>
	<string name="loading">Loading</string>
	<string name="download_files">Download Files</string>
	
</resources>
