<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp" >

    <TableRow >
    	<TextView
	        android:id="@+id/ip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ip"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/address"
	        android:layout_width="250sp"
	        android:layout_height="wrap_content"
	        android:ems="10" 
	        android:maxLines="1"
	        android:text="@string/network_address"
	        android:includeFontPadding="true" >
	
	        <requestFocus />
	    </EditText>
	</TableRow>
    
    <TableRow >
	    <TextView
	        android:id="@+id/TextView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/port"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/port"
	        android:layout_width="125dp"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="number" 
	        android:text="@string/open_port"/>
	</TableRow>
		
    <TableRow >

        <Button
            android:id="@+id/connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect" />

	</TableRow>

</TableLayout>