<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:contentDescription="@string/image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
	    <TextView
	        android:id="@+id/name_field"
	        android:layout_marginLeft="5dp"
	        android:layout_marginTop="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/server_name"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <TextView
	        android:id="@+id/ip_field"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text" />
	    
	</LinearLayout>

</LinearLayout>
